Completed services part

--- a/index.html
+++ b/index.html
@@ -10,32 +10,35 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="https://kit.fontawesome.com/63852fa8cf.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/63852fa8cf.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Mobile Operators</title>
   </head>
   <body>
     <section id="nav">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-3 logo">
-              <img src="/img/logo.png" alt="voopo" />
-            </div>
-            <div class="col-md-9 menu">
-              <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Service</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
-              </ul>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 logo">
+            <img src="/img/logo.png" alt="voopo" />
+          </div>
+          <div class="col-md-9 menu">
+            <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">Service</a></li>
+              <li><a href="">About</a></li>
+              <li><a href="">Contact</a></li>
+            </ul>
           </div>
         </div>
+      </div>
     </section>
 
     <section id="welcome-banner">
       <div class="container">
         <div class="row">
-          <div class="col-md-7  text">
+          <div class="col-md-7 text">
             <h1>Make a batter connection for your Business</h1>
             <p>
               On the other han denounce with righteous indignation and dislike
@@ -51,52 +54,126 @@
     </section>
 
     <section id="top-navigations">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-3">
-              <i class="fa fa-cloud"></i>
-              <h3>Fist Service</h3>
-              <p>
-                At vero eos accusamus iusto odio dignissims ducimus blanditiis
-                praesentium voluptatum deleniti atque corrupti dolores et quas.
-              </p>
-            </div>
-            <div class="col-md-3">
-              <i class="fa fa-tachometer-alt"></i>
-              <h3>Cloud SSD</h3>
-              <p>
-                At vero eos accusamus iusto odio dignissims ducimus blanditiis
-                praesentium voluptatum deleniti atque corrupti dolores et quas.
-              </p>
-            </div>
-            <div class="col-md-3">
-              <i class="fa fa-chart-line"></i>
-              <h3>Top Rated</h3>
-              <p>
-                At vero eos accusamus iusto odio dignissims ducimus blanditiis
-                praesentium voluptatum deleniti atque corrupti dolores et quas.
-              </p>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <i class="fa fa-cloud"></i>
+            <h3>Fist Service</h3>
+            <p>
+              At vero eos accusamus iusto odio dignissims ducimus blanditiis
+              praesentium voluptatum deleniti atque corrupti dolores et quas.
+            </p>
+          </div>
+          <div class="col-md-3">
+            <i class="fa fa-tachometer-alt"></i>
+            <h3>Cloud SSD</h3>
+            <p>
+              At vero eos accusamus iusto odio dignissims ducimus blanditiis
+              praesentium voluptatum deleniti atque corrupti dolores et quas.
+            </p>
+          </div>
+          <div class="col-md-3">
+            <i class="fa fa-chart-line"></i>
+            <h3>Top Rated</h3>
+            <p>
+              At vero eos accusamus iusto odio dignissims ducimus blanditiis
+              praesentium voluptatum deleniti atque corrupti dolores et quas.
+            </p>
           </div>
         </div>
+      </div>
     </section>
 
     <section id="desc">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-7"><img src="/img/meeting.png" alt="meeting"></div>
-                <div class="col-md-5 text">
-                    <h2>Voopo Is complete solution for you Business</h2>
-                    <hr>
-                    <p class="change-p-color">And equal blame duty belongs to those who fail in their duty through weakne will.</p>
-                    <p>On the other hand, denounce with righteous indignation and dislike men who are beguiled and demor the charms pleasure the moment, so blinded dislike by desire, that they cannot foresee the pain and trouble that are bound to ens</p>
-                    <p>And equal blame duty belongs to those who fail in their duty through weakne will.</p>
-                </div>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img src="/img/meeting.png" alt="meeting" />
+          </div>
+          <div class="col-md-6 text">
+            <h2>Voopo Is complete solution for you Business</h2>
+            <hr />
+            <p class="change-p-color">
+              And equal blame duty belongs to those who fail in their duty
+              through weakne will.
+            </p>
+            <p>
+              On the other hand, denounce with righteous indignation and dislike
+              men who are beguiled and demor the charms pleasure the moment, so
+              blinded dislike by desire, that they cannot foresee the pain and
+              trouble that are bound to ens
+            </p>
+            <p>
+              And equal blame duty belongs to those who fail in their duty
+              through weakne will.
+            </p>
+          </div>
         </div>
+      </div>
     </section>
 
-    <section id="service-info"></section>
+    <section id="service-info">
+      <div class="service-info-desc">
+        <h2>Best Service</h2>
+        <h2>we provide</h2>
+        <p>Nulla consectetur condimentum tellus ut scelerisque.</p>
+        <button class="btn-gradient">Learn more</button>
+      </div>
+      <div class="service-info-items">
+        <div class="service-info-item">
+          <div class="service-info-items-icon">
+            <i class="fa fa-cloud"></i>
+          </div>
+          <div class="service-info-items-text">
+            <h4>Cloud Base Solutions</h4>
+            <p>
+              Nullam maximus porta odio a venenatis. Ut finibus quis orci in
+              volutpat. Ut aliquam odio placerat nisl bibendum, vel suscipit leo
+              elementum.
+            </p>
+          </div>
+        </div>
+        <div class="service-info-item">
+          <div class="service-info-items-icon">
+            <i class="fa fa-cloud"></i>
+          </div>
+          <div class="service-info-items-text">
+            <h4>Cloud Base Solutions</h4>
+            <p>
+              Nullam maximus porta odio a venenatis. Ut finibus quis orci in
+              volutpat. Ut aliquam odio placerat nisl bibendum, vel suscipit leo
+              elementum.
+            </p>
+          </div>
+        </div>
+        <div class="service-info-item">
+          <div class="service-info-items-icon">
+            <i class="fa fa-cloud"></i>
+          </div>
+          <div class="service-info-items-text">
+            <h4>Cloud Base Solutions</h4>
+            <p>
+              Nullam maximus porta odio a venenatis. Ut finibus quis orci in
+              volutpat. Ut aliquam odio placerat nisl bibendum, vel suscipit leo
+              elementum.
+            </p>
+          </div>
+        </div>
+        <div class="service-info-item">
+          <div class="service-info-items-icon">
+            <i class="fa fa-cloud"></i>
+          </div>
+          <div class="service-info-items-text">
+            <h4>Cloud Base Solutions</h4>
+            <p>
+              Nullam maximus porta odio a venenatis. Ut finibus quis orci in
+              volutpat. Ut aliquam odio placerat nisl bibendum, vel suscipit leo
+              elementum.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section id="product-visual-info"></section>
 
@@ -104,6 +181,8 @@
 
     <section id="operators"></section>
 
-    <footer>footer</footer>
+    <!-- <footer>
+    <img src="img/l-circle.png" alt="" style="border:1px solid red;">
+    </footer> -->
   </body>
 </html>
