--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <ul>
             <li><a href="">Home</a></li>
             <li><a href="">Service</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="#desc">About</a></li>
             <li><a href="">Contact</a></li>
           </ul>
         </div>
@@ -211,11 +211,35 @@
     </div>
   </section>
 
-  <section id="operators"></section>
-
-  <!-- <footer>
-    <img src="img/l-circle.png" alt="" style="border:1px solid red;">
-    </footer> -->
+  <!-- <section id="operators"></section> -->
+  <footer>
+    <div>
+      <div class="footer-logo">
+        <img src="img/logo.png" width="190" height="73" alt="">
+        <p>
+          There are variations of passages of Lorem Ipsum available, the majority have suffered alteration.</p>
+      </div>
+      <div class="help-line">
+        <h3>Help Line</h3>
+        <ul>
+          <li>Cloud Phone Service</li>
+          <li>Media Relation</li>
+          <li>Business Program</li>
+          <li>Home Service</li>
+          <li>Service Guide</li>
+        </ul>
+      </div>
+      <div class="menu-line">
+        <h3>Menu Line</h3>
+        <ul>
+          <li>Home</li>
+          <li>Service</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
