Created Contact page

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="col-md-9 menu">
           <ul>
             <li><a href="">Home</a></li>
-            <li><a href="">Service</a></li>
+            <li><a href="#service-info">Service</a></li>
             <li><a href="#desc">About</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -222,20 +222,20 @@
       <div class="help-line">
         <h3>Help Line</h3>
         <ul>
-          <li>Cloud Phone Service</li>
-          <li>Media Relation</li>
-          <li>Business Program</li>
-          <li>Home Service</li>
-          <li>Service Guide</li>
+          <li><a href="">Cloud Phone Service</a></li>
+          <li><a href="">Media Relation</a></li>
+          <li><a href="">Business Program</a></li>
+          <li><a href="">Home Service</a></li>
+          <li><a href="">Service Guide</a></li>
         </ul>
       </div>
       <div class="menu-line">
         <h3>Menu Line</h3>
         <ul>
-          <li>Home</li>
-          <li>Service</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li><a href="">Home</a></a></li>
+          <li><a href="#service-info">Service</a></li>
+          <li><a href="#desc">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
