Uncompleted operators page

--- a/index.html
+++ b/index.html
@@ -52,29 +52,35 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3">
-          <i class="fa fa-cloud"></i>
-          <h3>Fist Service</h3>
-          <p>
-            At vero eos accusamus iusto odio dignissims ducimus blanditiis
-            praesentium voluptatum deleniti atque corrupti dolores et quas.
-          </p>
-        </div>
-        <div class="col-md-3">
-          <i class="fa fa-tachometer-alt"></i>
-          <h3>Cloud SSD</h3>
-          <p>
-            At vero eos accusamus iusto odio dignissims ducimus blanditiis
-            praesentium voluptatum deleniti atque corrupti dolores et quas.
-          </p>
-        </div>
-        <div class="col-md-3">
-          <i class="fa fa-chart-line"></i>
-          <h3>Top Rated</h3>
-          <p>
-            At vero eos accusamus iusto odio dignissims ducimus blanditiis
-            praesentium voluptatum deleniti atque corrupti dolores et quas.
-          </p>
-        </div>
+            <a href="azercell.html">
+            <img src="img/azercell.jpeg" alt="">
+            <h3>Azercell</h3>
+            <p>
+              At vero eos accusamus iusto odio dignissims ducimus blanditiis
+              praesentium voluptatum deleniti atque corrupti dolores et quas.
+            </p>
+          </a>
+          </div>
+          <div class="col-md-3">
+            <a href="bakcell.html">
+            <img src="img/bakcell.jpg" alt="">
+            <h3>Bakcell</h3>
+            <p>
+              At vero eos accusamus iusto odio dignissims ducimus blanditiis
+              praesentium voluptatum deleniti atque corrupti dolores et quas.
+            </p>
+          </a>
+          </div>
+          <div class="col-md-3">
+            <a href="nar.html">
+            <img src="img/nar.png" alt="" id="nar">
+            <h3>Nar</h3>
+            <p>
+              At vero eos accusamus iusto odio dignissims ducimus blanditiis
+              praesentium voluptatum deleniti atque corrupti dolores et quas.
+            </p>
+          </a>
+          </div>
       </div>
     </div>
   </section>
