Added some text

--- a/index.html
+++ b/index.html
@@ -2,250 +2,228 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/css/style.css" />
-  <script src="https://kit.fontawesome.com/63852fa8cf.js" crossorigin="anonymous"></script>
-  <title>Mobile Operators</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="https://kit.fontawesome.com/63852fa8cf.js" crossorigin="anonymous"></script>
+    <title>Mobile Operators</title>
 </head>
 
 <body>
-  <section id="nav">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 logo">
-          <img src="/img/logo.png" alt="voopo" />
+    <section id="nav">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 logo">
+                    <h3 style="color: white;" '>Mobile Operators</h3>
+                </div>
+                <div class="col-md-9 menu">
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="#service-info">Service</a></li>
+                        <li><a href="#desc">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="col-md-9 menu">
+    </section>
+
+    <section id="welcome-banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7 text">
+                    <h1>Mobile operators In the terrirtory of Azerbaijan</h1>
+                    <p>
+                          
+                    </p>
+                    <a href="#desc"><button class="btn-gradient">Learn more</button></a>
+                </div>
+                <div class="col-md-5 photo">
+                    <img src="/img/technology-connection.png" alt="" />
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="top-navigations">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <a href="azercell.html">
+                        <img src="img/azercell.jpeg" alt="">
+                        <h3>Azercell</h3>
+                        <p>
+                          Azercell is a mobile telecommunications company, located in Baku, Azerbaijan. The leading mobile operator of the country “Azercell Telecom” LLC with more than 5 million customers controls the largest market share of the local market. The 100% shareholder of Azercell is the Turkish company " Azertel Telekomünikasyon ve Yatırım Dış Ticaret A.Ş," </p>
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="bakcell.html">
+                        <img src="img/bakcell.jpg" alt="">
+                        <h3>Bakcell</h3>
+                        <p>
+                          Bakcell is the first company to provide mobile communications services in Azerbaijan. Its network covers 93% of the country’s territory (excluding occupied territories) and 99% of the population thanks to well-over 8000 base stations.Bakcell provides a wide range of high-quality modern telecommunication services to more than 3 million customers.</p>
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="nar.html">
+                        <img src="img/nar.png" alt="" id="nar">
+                        <h3>Nar</h3>
+                        <p>
+                          Nar is a brand for commercial activities of Azerfon, a mobile telecommunications company, located in Baku, Azerbaijan. Azerfon LLC launched its commercial activities on 21 March 2007 under brand name Nar Mobile. Today the network coverage of Azerfon claims to reach the territory of the Azerbaijan Republic
+                        </p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="desc">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="img/meeting.png" alt="meeting" />
+                </div>
+                <div class="col-md-6 text">
+                    <h2>Telephone system and mobile operators in Azerbaijan</h2>
+                    <hr />
+                    <p class="change-p-color">
+                      There are three major mobile phone operators currently in Azerbaijan: Azercell, Bakcell and Nar (Brand of Azerfon). Azercell, Bakcell and Nar (Brand of Azerfon) offer 2G, 3G and 4G services. All three networks are widely modern and reliable with shops located in major towns and cities where one can purchase a sim card or get assistance if needed                    </p>
+                    <p>
+                      Azercell, Bakcell and Azerfon are often recommended to tourists due to the variety of tariffs available and the help available in a variety of languages. Other mobile phone operators include Aztelekom, AzEuroTel, Caspian Telecom and Catel Eurasiacom.</p>
+                    <p>
+                      As of June 2014, approximately 95% of all main lines are digitized and provide excellent quality services for the region. The remaining 5% is in modernization process.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="service-info">
+        <div class="service-info-desc">
+            <h2>Best Service</h2>
+            <h2>we provide</h2>
+            <p>Nulla consectetur condimentum tellus ut scelerisque.</p>
+            <button class="btn-gradient">Learn more</button>
+        </div>
+        <div class="service-info-items">
+            <div class="service-info-item">
+                <div class="service-info-items-icon">
+                    <i class="fa fa-cloud"></i>
+                </div>
+                <div class="service-info-items-text">
+                    <h4>Cloud Base Solutions</h4>
+                    <p>
+                        Nullam maximus porta odio a venenatis. Ut finibus quis orci in volutpat. Ut aliquam odio placerat nisl bibendum, vel suscipit leo elementum.
+                    </p>
+                </div>
+            </div>
+            <div class="service-info-item">
+                <div class="service-info-items-icon">
+                    <i class="fa fa-cloud"></i>
+                </div>
+                <div class="service-info-items-text">
+                    <h4>Cloud Base Solutions</h4>
+                    <p>
+                        Nullam maximus porta odio a venenatis. Ut finibus quis orci in volutpat. Ut aliquam odio placerat nisl bibendum, vel suscipit leo elementum.
+                    </p>
+                </div>
+            </div>
+            <div class="service-info-item">
+                <div class="service-info-items-icon">
+                    <i class="fa fa-cloud"></i>
+                </div>
+                <div class="service-info-items-text">
+                    <h4>Cloud Base Solutions</h4>
+                    <p>
+                        Nullam maximus porta odio a venenatis. Ut finibus quis orci in volutpat. Ut aliquam odio placerat nisl bibendum, vel suscipit leo elementum.
+                    </p>
+                </div>
+            </div>
+            <div class="service-info-item">
+                <div class="service-info-items-icon">
+                    <i class="fa fa-cloud"></i>
+                </div>
+                <div class="service-info-items-text">
+                    <h4>Cloud Base Solutions</h4>
+                    <p>
+                        Nullam maximus porta odio a venenatis. Ut finibus quis orci in volutpat. Ut aliquam odio placerat nisl bibendum, vel suscipit leo elementum.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- <section id="product-visual-info"></section> -->
+
+    <section id="packages" >
+        <h3>Package</h3>
+        <h4>Pick a Pricing Plan</h4>
+        <div class="packages-container" >
+            <div class="package">
+                <h3>
+                    Basic
+                </h3>
+                <h4>$ 29.11 /month</h4>
+                <p>700 Minute Calls</p>
+                <p>2 IP Dedicated</p>
+                <p>10 Phone Number</p>
+                <p>Personal Server</p>
+                <p>15 Countries</p>
+                <button class=' btn-gradient '>Order now</button>
+          </div>
+          <div class="package">
+            <h3>Standered</h3>
+            <h4>$ 29.11 /month</h4>
+            <p>700 Minute Calls</p>
+            <p>2 IP Dedicated</p>
+            <p>10 Phone Number</p>
+            <p>Personal Server</p>
+            <p>15 Countries</p>
+            <button class=' btn-gradient '>Order now</button>
+          </div>
+          <div class="package">
+            <h3>Enterprise</h3>
+            <h4>$ 29.11 /month</h4>
+            <p>700 Minute Calls</p>
+            <p>2 IP Dedicated</p>
+            <p>10 Phone Number</p>
+            <p>Personal Server</p>
+            <p>15 Countries</p>
+            <button class=' btn-gradient '>Order now</button>
+          </div>
+        </div>
+    </section>
+
+    <!-- <section id="operators"></section> -->
+    <footer>
+      <div>
+        <div class="footer-logo">
+          <img src="img/logo.png" width="190" height="73" alt="">
+          <p>
+            There are variations of passages of Lorem Ipsum available, the majority have suffered alteration.</p>
+        </div>
+        <div class="help-line">
+          <h3>Help Line</h3>
           <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="">Cloud Phone Service</a></li>
+            <li><a href="">Media Relation</a></li>
+            <li><a href="">Business Program</a></li>
+            <li><a href="">Home Service</a></li>
+            <li><a href="">Service Guide</a></li>
+          </ul>
+        </div>
+        <div class="menu-line">
+          <h3>Menu Line</h3>
+          <ul>
+            <li><a href="">Home</a></a>
+            </li>
             <li><a href="#service-info">Service</a></li>
             <li><a href="#desc">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
-    </div>
-  </section>
-
-  <section id="welcome-banner">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-7 text">
-          <h1>Make a batter connection for your Business</h1>
-          <p>
-            On the other han denounce with righteous indignation and dislike
-            men who are so beguiled.
-          </p>
-          <button class="btn-gradient">Learn more</button>
-        </div>
-        <div class="col-md-5 photo">
-          <img src="/img/technology-connection.png" alt="" />
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="top-navigations">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-            <a href="azercell.html">
-            <img src="img/azercell.jpeg" alt="">
-            <h3>Azercell</h3>
-            <p>
-              At vero eos accusamus iusto odio dignissims ducimus blanditiis
-              praesentium voluptatum deleniti atque corrupti dolores et quas.
-            </p>
-          </a>
-          </div>
-          <div class="col-md-3">
-            <a href="bakcell.html">
-            <img src="img/bakcell.jpg" alt="">
-            <h3>Bakcell</h3>
-            <p>
-              At vero eos accusamus iusto odio dignissims ducimus blanditiis
-              praesentium voluptatum deleniti atque corrupti dolores et quas.
-            </p>
-          </a>
-          </div>
-          <div class="col-md-3">
-            <a href="nar.html">
-            <img src="img/nar.png" alt="" id="nar">
-            <h3>Nar</h3>
-            <p>
-              At vero eos accusamus iusto odio dignissims ducimus blanditiis
-              praesentium voluptatum deleniti atque corrupti dolores et quas.
-            </p>
-          </a>
-          </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="desc">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <img src="/img/meeting.png" alt="meeting" />
-        </div>
-        <div class="col-md-6 text">
-          <h2>Voopo Is complete solution for you Business</h2>
-          <hr />
-          <p class="change-p-color">
-            And equal blame duty belongs to those who fail in their duty
-            through weakne will.
-          </p>
-          <p>
-            On the other hand, denounce with righteous indignation and dislike
-            men who are beguiled and demor the charms pleasure the moment, so
-            blinded dislike by desire, that they cannot foresee the pain and
-            trouble that are bound to ens
-          </p>
-          <p>
-            And equal blame duty belongs to those who fail in their duty
-            through weakne will.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="service-info">
-    <div class="service-info-desc">
-      <h2>Best Service</h2>
-      <h2>we provide</h2>
-      <p>Nulla consectetur condimentum tellus ut scelerisque.</p>
-      <button class="btn-gradient">Learn more</button>
-    </div>
-    <div class="service-info-items">
-      <div class="service-info-item">
-        <div class="service-info-items-icon">
-          <i class="fa fa-cloud"></i>
-        </div>
-        <div class="service-info-items-text">
-          <h4>Cloud Base Solutions</h4>
-          <p>
-            Nullam maximus porta odio a venenatis. Ut finibus quis orci in
-            volutpat. Ut aliquam odio placerat nisl bibendum, vel suscipit leo
-            elementum.
-          </p>
-        </div>
-      </div>
-      <div class="service-info-item">
-        <div class="service-info-items-icon">
-          <i class="fa fa-cloud"></i>
-        </div>
-        <div class="service-info-items-text">
-          <h4>Cloud Base Solutions</h4>
-          <p>
-            Nullam maximus porta odio a venenatis. Ut finibus quis orci in
-            volutpat. Ut aliquam odio placerat nisl bibendum, vel suscipit leo
-            elementum.
-          </p>
-        </div>
-      </div>
-      <div class="service-info-item">
-        <div class="service-info-items-icon">
-          <i class="fa fa-cloud"></i>
-        </div>
-        <div class="service-info-items-text">
-          <h4>Cloud Base Solutions</h4>
-          <p>
-            Nullam maximus porta odio a venenatis. Ut finibus quis orci in
-            volutpat. Ut aliquam odio placerat nisl bibendum, vel suscipit leo
-            elementum.
-          </p>
-        </div>
-      </div>
-      <div class="service-info-item">
-        <div class="service-info-items-icon">
-          <i class="fa fa-cloud"></i>
-        </div>
-        <div class="service-info-items-text">
-          <h4>Cloud Base Solutions</h4>
-          <p>
-            Nullam maximus porta odio a venenatis. Ut finibus quis orci in
-            volutpat. Ut aliquam odio placerat nisl bibendum, vel suscipit leo
-            elementum.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- <section id="product-visual-info"></section> -->
-
-  <section id="packages">
-    <h3>Package</h3>
-    <h4>Pick a Pricing Plan</h4>
-    <div class="packages-container">
-      <div class="package">
-        <h3>
-          Basic
-        </h3>
-        <h4>$ 29.11 /month</h4>
-        <p>700 Minute Calls</p>
-        <p>2 IP Dedicated</p>
-        <p>10 Phone Number</p>
-        <p>Personal Server</p>
-        <p>15 Countries</p>
-        <button class='btn-gradient'>Order now</button>
-      </div>
-      <div class="package">
-        <h3>Standered</h3>
-        <h4>$ 29.11 /month</h4>
-        <p>700 Minute Calls</p>
-        <p>2 IP Dedicated</p>
-        <p>10 Phone Number</p>
-        <p>Personal Server</p>
-        <p>15 Countries</p>
-        <button class='btn-gradient'>Order now</button>
-      </div>
-      <div class="package">
-        <h3>Enterprise</h3>
-        <h4>$ 29.11 /month</h4>
-        <p>700 Minute Calls</p>
-        <p>2 IP Dedicated</p>
-        <p>10 Phone Number</p>
-        <p>Personal Server</p>
-        <p>15 Countries</p>
-        <button class='btn-gradient'>Order now</button>
-      </div>
-    </div>
-  </section>
-
-  <!-- <section id="operators"></section> -->
-  <footer>
-    <div>
-      <div class="footer-logo">
-        <img src="img/logo.png" width="190" height="73" alt="">
-        <p>
-          There are variations of passages of Lorem Ipsum available, the majority have suffered alteration.</p>
-      </div>
-      <div class="help-line">
-        <h3>Help Line</h3>
-        <ul>
-          <li><a href="">Cloud Phone Service</a></li>
-          <li><a href="">Media Relation</a></li>
-          <li><a href="">Business Program</a></li>
-          <li><a href="">Home Service</a></li>
-          <li><a href="">Service Guide</a></li>
-        </ul>
-      </div>
-      <div class="menu-line">
-        <h3>Menu Line</h3>
-        <ul>
-          <li><a href="">Home</a></a></li>
-          <li><a href="#service-info">Service</a></li>
-          <li><a href="#desc">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 
 </html>
