--- a/azercell.html
+++ b/azercell.html
@@ -16,14 +16,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 logo">
-                    <img src="/img/logo.png" alt="voopo" />
+                    <a href="/">
+                        <img src="/img/logo.png" alt="" />
+                    </a>
                 </div>
                 <div class="col-md-9 menu">
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="index.html#service-info">Service</a></li>
                         <li><a href="index.html#desc">About</a></li>
-                        <li><a href="">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -31,23 +33,20 @@
     </section>
 
     <section id="azercell">
-        <div class="bg"></div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit laudantium, eligendi pariatur harum porro doloribus laborum molestiae modi! Tenetur explicabo iusto voluptatum facilis soluta totam praesentium. Mollitia, libero quos!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit laudantium, eligendi pariatur harum porro doloribus laborum molestiae modi! Tenetur explicabo iusto voluptatum facilis soluta totam praesentium. Mollitia, libero quos!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit laudantium, eligendi pariatur harum porro doloribus laborum molestiae modi! Tenetur explicabo iusto voluptatum facilis soluta totam praesentium. Mollitia, libero quos!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit laudantium, eligendi pariatur harum porro doloribus laborum molestiae modi! Tenetur explicabo iusto voluptatum facilis soluta totam praesentium. Mollitia, libero quos!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit laudantium, eligendi pariatur harum porro doloribus laborum molestiae modi! Tenetur explicabo iusto voluptatum facilis soluta totam praesentium. Mollitia, libero quos!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit laudantium, eligendi pariatur harum porro doloribus laborum molestiae modi! Tenetur explicabo iusto voluptatum facilis soluta totam praesentium. Mollitia, libero quos!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit laudantium, eligendi pariatur harum porro doloribus laborum molestiae modi! Tenetur explicabo iusto voluptatum facilis soluta totam praesentium. Mollitia, libero quos!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit laudantium, eligendi pariatur harum porro doloribus laborum molestiae modi! Tenetur explicabo iusto voluptatum facilis soluta totam praesentium. Mollitia, libero quos!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit laudantium, eligendi pariatur harum porro doloribus laborum molestiae modi! Tenetur explicabo iusto voluptatum facilis soluta totam praesentium. Mollitia, libero quos!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit laudantium, eligendi pariatur harum porro doloribus laborum molestiae modi! Tenetur explicabo iusto voluptatum facilis soluta totam praesentium. Mollitia, libero quos!</p>
+        <div class="azercell-bg"></div>
+        <div class="bg">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit laudantium, eligendi pariatur harum porro doloribus laborum molestiae modi! Tenetur explicabo iusto voluptatum facilis soluta totam praesentium. Mollitia, libero quos!
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptate laborum nobis soluta nostrum. Ea aut distinctio, odio iusto amet labore delectus accusantium minima. Corrupti laboriosam reprehenderit animi consequatur sequi.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptate laborum nobis soluta nostrum. Ea aut distinctio, odio iusto amet labore delectus accusantium minima. Corrupti laboriosam reprehenderit animi consequatur sequi.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptate laborum nobis soluta nostrum. Ea aut distinctio, odio iusto amet labore delectus accusantium minima. Corrupti laboriosam reprehenderit animi consequatur sequi.
+            </p>
+        </div>
     </section>
 
     <!-- <section id="product-visual-info"></section> -->
 
     <section id="packages">
-        <h3>Package</h3>
+        <h3>The best-selling Azercell Packages</h3><br>
         <h4>Pick a Pricing Plan</h4>
         <div class="packages-container">
             <div class="package">
@@ -89,7 +88,7 @@
     <footer>
         <div>
             <div class="footer-logo">
-                <img src="img/logo.png" width="190" height="73" alt="">
+                <img src="img/logo.png" height="73" alt="">
                 <p>
                     There are variations of passages of Lorem Ipsum available, the majority have suffered alteration.
                 </p>
