--- a/contact.html
+++ b/contact.html
@@ -16,14 +16,16 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 logo">
-          <img src="/img/logo.png" alt="voopo" />
+          <a href="/">
+          <img src="/img/logo.png" alt="" />
+          </a>
         </div>
         <div class="col-md-9 menu">
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html#service-info">Service</a></li>
             <li><a href="index.html#desc">About</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -104,7 +106,7 @@
   <footer>
     <div>
       <div class="footer-logo">
-        <img src="img/logo.png" width="190" height="73" alt="">
+        <img src="img/logo.png" height="73" alt="">
         <p>
           There are variations of passages of Lorem Ipsum available, the majority have suffered alteration.</p>
       </div>
