--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 logo">
-                    <h3 style="color: white;" '>Mobile Operators</h3>
+                    <a href="/"><img src="/img/logo.png" alt=""></a>
                 </div>
                 <div class="col-md-9 menu">
                     <ul>
@@ -198,7 +198,7 @@
     <footer>
       <div>
         <div class="footer-logo">
-          <img src="img/logo.png" width="190" height="73" alt="">
+          <img src="img/logo.png"  height="73" alt="">
           <p>
             There are variations of passages of Lorem Ipsum available, the majority have suffered alteration.</p>
         </div>
