--- a/nar.html
+++ b/nar.html
@@ -2,108 +2,118 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-  <link rel="stylesheet" href="css/style.css" />
-  <script src="https://kit.fontawesome.com/63852fa8cf.js" crossorigin="anonymous"></script>
-  <title>Mobile Operators | Nar</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="https://kit.fontawesome.com/63852fa8cf.js" crossorigin="anonymous"></script>
+    <title>Mobile Operators | Nar</title>
 </head>
 
 <body>
-  <section id="nav">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 logo">
-          <img src="/img/logo.png" alt="voopo" />
+    <section id="nav">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 logo">
+                    <a href="/">
+                        <img src="/img/logo.png" alt="voopo" />
+                    </a>
+                </div>
+                <div class="col-md-9 menu">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html#service-info">Service</a></li>
+                        <li><a href="index.html#desc">About</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="col-md-9 menu">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index.html#service-info">Service</a></li>
-            <li><a href="index.html#desc">About</a></li>
-            <li><a href="">Contact</a></li>
-          </ul>
+    </section>
+
+    <section id="nar">
+        <div class="nar-bg"></div>
+        <div class="bg">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit laudantium, eligendi pariatur harum porro doloribus laborum molestiae modi! Tenetur explicabo iusto voluptatum facilis soluta totam praesentium. Mollitia, libero quos!
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptate laborum nobis soluta nostrum. Ea aut distinctio, odio iusto amet labore delectus accusantium minima. Corrupti laboriosam reprehenderit animi consequatur sequi.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptate laborum nobis soluta nostrum. Ea aut distinctio, odio iusto amet labore delectus accusantium minima. Corrupti laboriosam reprehenderit animi consequatur sequi.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptate laborum nobis soluta nostrum. Ea aut distinctio, odio iusto amet labore delectus accusantium minima. Corrupti laboriosam reprehenderit animi consequatur sequi.
+            </p>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <section id="nar">
-   
-  </section>
+    <!-- <section id="product-visual-info"></section> -->
 
-  <!-- <section id="product-visual-info"></section> -->
+    <section id="packages">
+        <h3>The best-selling Nar Packages</h3><br>
+        <h4>Pick a Pricing Plan</h4>
+        <div class="packages-container">
+            <div class="package">
+                <h3>
+                    Basic
+                </h3>
+                <h4>$ 29.11 /month</h4>
+                <p>700 Minute Calls</p>
+                <p>2 IP Dedicated</p>
+                <p>10 Phone Number</p>
+                <p>Personal Server</p>
+                <p>15 Countries</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+            <div class="package">
+                <h3>Standered</h3>
+                <h4>$ 29.11 /month</h4>
+                <p>700 Minute Calls</p>
+                <p>2 IP Dedicated</p>
+                <p>10 Phone Number</p>
+                <p>Personal Server</p>
+                <p>15 Countries</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+            <div class="package">
+                <h3>Enterprise</h3>
+                <h4>$ 29.11 /month</h4>
+                <p>700 Minute Calls</p>
+                <p>2 IP Dedicated</p>
+                <p>10 Phone Number</p>
+                <p>Personal Server</p>
+                <p>15 Countries</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+        </div>
+    </section>
 
-  <section id="packages">
-    <h3>Package</h3>
-    <h4>Pick a Pricing Plan</h4>
-    <div class="packages-container">
-      <div class="package">
-        <h3>
-          Basic
-        </h3>
-        <h4>$ 29.11 /month</h4>
-        <p>700 Minute Calls</p>
-        <p>2 IP Dedicated</p>
-        <p>10 Phone Number</p>
-        <p>Personal Server</p>
-        <p>15 Countries</p>
-        <button class='btn-gradient'>Order now</button>
-      </div>
-      <div class="package">
-        <h3>Standered</h3>
-        <h4>$ 29.11 /month</h4>
-        <p>700 Minute Calls</p>
-        <p>2 IP Dedicated</p>
-        <p>10 Phone Number</p>
-        <p>Personal Server</p>
-        <p>15 Countries</p>
-        <button class='btn-gradient'>Order now</button>
-      </div>
-      <div class="package">
-        <h3>Enterprise</h3>
-        <h4>$ 29.11 /month</h4>
-        <p>700 Minute Calls</p>
-        <p>2 IP Dedicated</p>
-        <p>10 Phone Number</p>
-        <p>Personal Server</p>
-        <p>15 Countries</p>
-        <button class='btn-gradient'>Order now</button>
-      </div>
-    </div>
-  </section>
-
-  <!-- <section id="operators"></section> -->
-  <footer>
-    <div>
-      <div class="footer-logo">
-        <img src="img/logo.png" width="190" height="73" alt="">
-        <p>
-          There are variations of passages of Lorem Ipsum available, the majority have suffered alteration.</p>
-      </div>
-      <div class="help-line">
-        <h3>Help Line</h3>
-        <ul>
-          <li><a href="">Cloud Phone Service</a></li>
-          <li><a href="">Media Relation</a></li>
-          <li><a href="">Business Program</a></li>
-          <li><a href="">Home Service</a></li>
-          <li><a href="">Service Guide</a></li>
-        </ul>
-      </div>
-      <div class="menu-line">
-        <h3>Menu Line</h3>
-        <ul>
-          <li><a href="">Home</a></a></li>
-          <li><a href="#service-info">Service</a></li>
-          <li><a href="#desc">About</a></li>
-          <li><a href="">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-  </footer>
+    <!-- <section id="operators"></section> -->
+    <footer>
+        <div>
+            <div class="footer-logo">
+                <img src="img/logo.png" height="73" alt="">
+                <p>
+                    There are variations of passages of Lorem Ipsum available, the majority have suffered alteration.
+                </p>
+            </div>
+            <div class="help-line">
+                <h3>Help Line</h3>
+                <ul>
+                    <li><a href="">Cloud Phone Service</a></li>
+                    <li><a href="">Media Relation</a></li>
+                    <li><a href="">Business Program</a></li>
+                    <li><a href="">Home Service</a></li>
+                    <li><a href="">Service Guide</a></li>
+                </ul>
+            </div>
+            <div class="menu-line">
+                <h3>Menu Line</h3>
+                <ul>
+                    <li><a href="">Home</a></a></li>
+                    <li><a href="#service-info">Service</a></li>
+                    <li><a href="#desc">About</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
